# open-bot

./: .editorconfig  .env  .gitignore  .prettierignore  README.md  bun.lockb  client.py  env.py  module.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run.py  storage.py  tsconfig.json
docs/: PRIVACY.md  README.md  schedule-record.md
ds/: extract-sections.py  trends.R
mod/: __init__.py  message_stats.py
prisma/: schema.prisma
prisma/migrations/20220807165900_init/: migration.sql
prisma/migrations/20220807173721_quotes/: migration.sql
prisma/migrations/20220809044900_add_enrollments/: migration.sql
prisma/migrations/20220812051344_index_enrollments/: migration.sql
prisma/migrations/20220812052131_index_enrollment_students/: migration.sql
prisma/migrations/20220812183001_user_notify_peers/: migration.sql
prisma/migrations/20230824044822_birthdaytest/: migration.sql
prisma/migrations/20230824045009_birthdaytest2_int/: migration.sql
src/: environment.ts  host.ts  index.ts  storage.ts  utils.test.ts  utils.ts
src/campus/: buildings.json  umCampus.test.ts  umCampus.ts
src/mod/: BirthdayAnnounc.ts  birthdayAnnounce.ts  censorship.test.ts  censorship.ts  classLookup.ts  messageStats.ts  module.ts  quotes.ts  reginald.ts  registry.ts  scheduleRecord.ts
src/mod/scheduleRecord/: scheduleRenderer.test.ts  scheduleRenderer.ts  scheduleStorage.ts
src/soc/: entities.test.ts  entities.ts  sections-2360.json  sections-2370.json  sections-2410.json  sections-2420.json  sections-2460.json  umich.ts  umichApi.test.ts  umichApi.ts
